# reversible-computing-playground

./: .gitignore  INIT_ADDITION.txt  README.md  README_QUANTUM_SNIPPET.md  pyproject.toml  report.md
examples/: analyze_python_file.py  heavy_demo.py  quantum_toffoli_demo.py  runtime_usage.py  sample_program.py
reversible-computing-playground/: README.md
reversible-computing-playground/docs/: theory.md
reversible-computing-playground/examples/: demo.py
reversible-computing-playground/src/revcomp/: plots.py
reversible-computing-playground/tests/: test_gates.py
src/revcomp/: __init__.py  code_analyzer.py  gates.py  landauer.py  quantum.py  runtime.py  simulation.py
tests/: test_code_analyzer.py  test_runtime.py
