[project]
name = "reversible-computing-playground"
version = "0.1.0"
description = "A small educational Python project about reversible computing and the Landauer limit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
